--- a/lab/lab03/SimpleMyDot/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab03/SimpleMyDot/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="kmitl.lab03.montita58070114.simplemydot.MainActivity">
+    tools:context="kmitl.lab03.montita58070114.simplemydot.MainActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
         android:onClick="onRandomDot"
         android:text="@string/random_dot"
+        android:id="@+id/button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.15" />
 
     <kmitl.lab03.montita58070114.simplemydot.view.DotView
         android:id="@+id/dotView"
-        android:layout_width="0dp"
-        android:layout_height="439dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:layout_width="404dp"
+        android:layout_height="538dp"
+        tools:layout_editor_absoluteY="5dp"
+        tools:layout_editor_absoluteX="4dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/clear_dot"
+        android:onClick="onClearDot"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.736"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="13dp" />
 </android.support.constraint.ConstraintLayout>
