--- a/lab/lab04/SimpleMyDot/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab04/SimpleMyDot/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,7 @@
         android:id="@+id/btnShare"
         android:layout_width="74dp"
         android:layout_height="74dp"
+        android:onClick="onShareScreenshot"
         android:background="@mipmap/ic_screenshare"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"
