--- a/lab/lab04/SimpleMyDot/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab04/SimpleMyDot/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
         android:id="@+id/btnOpenActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="open activity"
+        android:text="@string/open_activity"
         app:layout_constraintRight_toLeftOf="@+id/removeAll"
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toRightOf="@+id/button"
