--- a/lab/lab07/MyLazyInstagram/app/src/main/res/menu/menu.xml
+++ b/lab/lab07/MyLazyInstagram/app/src/main/res/menu/menu.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/android"
+        app:showAsAction="always"
         android:title="@string/android" />
     <item
         android:id="@+id/nature"
+        app:showAsAction="always"
         android:title="@string/nature" />
     <item
         android:id="@+id/cartoon"
+        app:showAsAction="always"
         android:title="@string/cartoon" />
 
 </menu>
