Can View Amount and Transaction but cannot edit and delete

--- a/lab/lab09/moneyflow/app/src/main/res/menu/menu.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/menu/menu.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/btnAdd"
         app:showAsAction="always"
-        android:title="@string/add" />
+        android:title="@string/add"
+        android:icon="@drawable/ic_note_add"/>
 
 </menu>
