--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="kmitl.lab09.montita58070114.moneyflow.MainActivity">
 
     <TextView
-        android:id="@+id/ageText"
+        android:id="@+id/amountText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -21,10 +21,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/transactionListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -32,9 +32,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ageText"
+        app:layout_constraintTop_toBottomOf="@+id/amountText"
         app:layout_constraintVertical_bias="1.0" />
-
 
 
 </android.support.constraint.ConstraintLayout>
