--- a/lab/lab09/moneyflow/app/src/main/res/layout/activity_transaction.xml
+++ b/lab/lab09/moneyflow/app/src/main/res/layout/activity_transaction.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#e1f5fe"
-    tools:context="kmitl.lab09.montita58070114.moneyflow.AddTransactionActivity">
+    tools:context="kmitl.lab09.montita58070114.moneyflow.TransactionActivity">
 
     <TextView
         android:layout_width="wrap_content"
